@@ -65,6 +65,10 @@ Version 1.5.6+svn:
      to story  screens.
    * Fixed [role] not working when no type was specified (bug #12660).
    * Fixed compilation with Python 2.6 (bug #12638 (included a patch)).
+   * Fixed spammy multiplication of advancement options for units
+     affected by the [unit_type][advancefrom] clause (observed in
+     add-on Invasion_from_the_Unknown from the wesnoth-umc-dev
+     trunk) each time advancements were evaluated.
 
 Version 1.5.6:
  * Authoring tools:
